--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -41,19 +41,20 @@
         &:nth-child(3),
         &:nth-child(4) {
             display: block;
+            margin: 20px 0;
         }
     }
 
 
     .img-container {
         width: 100%;
-        height: 120px;
+        height: 150px;
         background-color: rgb(230, 230, 230);
         cursor: pointer;
 
         img {
             width: 100%;
-            height: 120px;
+            height: 150px;
         }
     }
 
