--- a/client/src/components/pages/_activitylist.scss
+++ b/client/src/components/pages/_activitylist.scss
@@ -33,12 +33,18 @@
                         margin-right: 10px;
 
                         img {
-                            width: 100%;
-                            height: 100%;
+                            width: 130px;
+                            height: 60px;
+
+                            @include responsive($mobile) {
+                                height: 70px;
+                                width: 110px;
+                            }
                         }
 
                         @include responsive($mobile) {
                             height: 70px;
+                            width: 110px;
                         }
 
                         @include responsive($less-tab) {
@@ -48,6 +54,7 @@
 
                     h3 {
                         color: #121212;
+                        cursor: pointer;
 
 
                         @include responsive($less-tab) {
