--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -36,6 +36,12 @@
                     height: 30px;
                     border-radius: 100%;
                     background-color: grey;
+
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 100%;
+                    }
                 }
 
                 .drop-down-container {
