--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,17 +1,18 @@
-@import './components/auth/auth';
-@import './components/navbar/navbar';
-@import './components/pages/Home';
-@import './components/layout components/Trending/trending';
-@import './components/layout components/Trending/TrendingItem/trendingitem';
-@import './components/layout components/Post/post';
-@import './components/layout components/General posts/popularposts';
-@import './components/layout components/editor/posteditor';
-@import './components/pages/dashboard';
-@import './components/pages/activitylist';
-@import './components/pages/profile/profile';
+@import "./components/auth/auth";
+@import "./components/navbar/navbar";
+// @import "./components/pages/Home";
+@import "./components/layout components/Trending/trending";
+@import "./components/layout components/Trending/TrendingItem/trendingitem";
+@import "./components/layout components/Post/post";
+@import "./components/layout components/General posts/popularposts";
+@import "./components/layout components/editor/posteditor";
+@import "./components/pages/dashboard";
+@import "./components/pages/activitylist";
+@import "./components/pages/profile/profile";
+@import "./components/pages/user-profile/that-user";
 
 .container-fluid {
-    display: flex;
-    padding: 0;
-    height: 100%;
+  display: flex;
+  padding: 0;
+  height: 100%;
 }
