--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1327,6 +1327,62 @@ pre * {
           flex-direction: column;
 }
 
+.profile-container-main .profile-container .profile-ksi .that-user-data .user-posts-hh {
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.profile-container-main .profile-container .profile-ksi .that-user-data .posts-ii-list .post-ii {
+  width: 300px;
+  height: 220px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #eeeeee;
+}
+
+.profile-container-main .profile-container .profile-ksi .that-user-data .posts-ii-list .post-ii .post-ii-img {
+  width: 100%;
+  height: 150px;
+}
+
+.profile-container-main .profile-container .profile-ksi .that-user-data .posts-ii-list .post-ii .post-ii-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
+
+.profile-container-main .profile-container .profile-ksi .that-user-data .posts-ii-list .post-ii .post-ii-heading {
+  font-size: 25px;
+  padding: 5px 3px 0 3px;
+}
+
+.profile-container-main .profile-container .profile-ksi .that-user-data .posts-ii-list .post-ii .post-ii-info {
+  width: 100%;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 3px 0 3px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .container-fluid {
   display: -webkit-box;
   display: -ms-flexbox;
