--- a/client/src/App.css
+++ b/client/src/App.css
@@ -561,6 +561,19 @@ i:hover {
   }
 }
 
+.post-comment-seperator {
+  width: 100%;
+  height: 2px;
+  background-color: #cccccc60;
+  margin-top: 80px;
+}
+
+.comment-tag {
+  font-size: 40px;
+  color: #00000080;
+  margin: 30px 0;
+}
+
 pre {
   background-color: #e3e3e3;
   min-width: 600px;
@@ -570,7 +583,7 @@ pre {
 }
 
 pre * {
-  font-family: 'Cutive Mono';
+  font-family: "Cutive Mono";
 }
 
 .popular-posts {
