--- a/client/src/components/layout components/Post/_post.scss
+++ b/client/src/components/layout components/Post/_post.scss
@@ -1,100 +1,111 @@
-@import '../../../mixins';
+@import "../../../mixins";
 
 .post-container-one {
-    padding: 0 130px;
-    width: 100%;
+  padding: 0 130px;
+  width: 100%;
 
-    @include responsive($less-tab) {
-        padding: 0 70px;
-    }
+  @include responsive($less-tab) {
+    padding: 0 70px;
+  }
 
-    @include responsive($less-tab) {
-        padding: 0 30px;
-    }
-
+  @include responsive($less-tab) {
+    padding: 0 30px;
+  }
 }
 
 .post-heading {
-    padding: 0;
-    margin: 40px 0 10px 0;
-    font-size: 55px;
+  padding: 0;
+  margin: 40px 0 10px 0;
+  font-size: 55px;
 
-    @include responsive($less-tab) {
-        font-size: 45px;
-    }
+  @include responsive($less-tab) {
+    font-size: 45px;
+  }
 
-    @include responsive($mobile) {
-        font-size: 40px;
-    }
+  @include responsive($mobile) {
+    font-size: 40px;
+  }
 }
 
 .user-p {
-    padding: 10px 10px 10px 0;
+  padding: 10px 10px 10px 0;
 
-    .dot-i {
-        width: 8px;
-        height: 8px;
-        border-radius: 100%;
-        background-color: #ccc;
-        margin: 0 10px;
+  .dot-i {
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background-color: #ccc;
+    margin: 0 10px;
+  }
+
+  i {
+    font-size: 25px;
+    margin-left: 20px;
+
+    &:hover {
+      color: rgb(255, 0, 106);
     }
-
-    i {
-        font-size: 25px;
-        margin-left: 20px;
-
-        &:hover {
-            color: rgb(255, 0, 106);
-        }
-    }
+  }
 }
 
 .img-post-container {
-    width: 100%;
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: auto;
     height: 400px;
-    background-color: #fff;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-    img {
-        width: auto;
-        height: 400px;
-
-        @include responsive($mobile) {
-            height: 300px;
-            max-width: 400px;
-        }
+    @include responsive($mobile) {
+      height: 300px;
+      max-width: 400px;
     }
-
+  }
 }
 
 .nn-new {
-    padding: 0px;
-    font-size: 25px;
-    margin-top: 20px;
-    line-height: 1.7;
+  padding: 0px;
+  font-size: 25px;
+  margin-top: 20px;
+  line-height: 1.7;
 
-    @include responsive($less-tab) {
-        font-size: 20px;
-    }
+  @include responsive($less-tab) {
+    font-size: 20px;
+  }
 
-    @include responsive($less-tab) {
-        font-size: 20px;
-    }
+  @include responsive($less-tab) {
+    font-size: 20px;
+  }
+}
+
+.post-comment-seperator {
+  width: 100%;
+  height: 2px;
+  background-color: #cccccc60;
+  margin-top: 80px;
+}
+
+.comment-tag {
+  font-size: 40px;
+  color: #00000080;
+  margin: 30px 0;
 }
 
 pre {
-    background-color: #e3e3e3;
-    min-width: 600px;
-    max-width: 100%;
-    margin: auto;
-    padding: 10px;
+  background-color: #e3e3e3;
+  min-width: 600px;
+  max-width: 100%;
+  margin: auto;
+  padding: 10px;
 
-    * {
-        font-family: 'Cutive Mono';
-    }
+  * {
+    font-family: "Cutive Mono";
+  }
 }
