--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,6 +10,7 @@
 @import "./components/pages/activitylist";
 @import "./components/pages/profile/profile";
 @import "./components/pages/user-profile/that-user";
+@import "./components/comment/comment";
 
 .container-fluid {
   display: flex;
