--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1426,6 +1426,7 @@ pre * {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom: 1px solid;
 }
 
 .comment-item .user-img img {
@@ -1433,19 +1434,19 @@ pre * {
 }
 
 .comment-item .cmt-right {
+  margin-left: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.comment-item .cmt-right .cmt-user {
+  font-weight: bold;
+  color: #00000080;
 }
 
 .container-fluid {
