added a uploading loader under post_img btn

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -614,6 +614,28 @@ pre * {
   margin-top: 40px;
 }
 
+:root {
+  --col: rgb(126, 204, 255);
+}
+
+@-webkit-keyframes moveLeft {
+  0% {
+    left: -200px;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes moveLeft {
+  0% {
+    left: -200px;
+  }
+  100% {
+    left: 0;
+  }
+}
+
 .editor-container-compose {
   width: 100%;
   padding: 0 130px;
@@ -622,6 +644,7 @@ pre * {
 .editor-container-compose .img-upload {
   position: relative;
   width: 200px;
+  cursor: pointer;
 }
 
 .editor-container-compose .img-upload .custom-upload {
@@ -638,6 +661,25 @@ pre * {
       -ms-flex-align: center;
           align-items: center;
   width: 200px;
+}
+
+.editor-container-compose .img-upload .img-loader {
+  width: 200px;
+  height: 4px;
+  border-radius: 4px;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.editor-container-compose .img-upload .img-loader .the-moving-grad {
+  background: -webkit-gradient(linear, left top, right top, from(#0066ff), color-stop(var(--col)), color-stop(#0066ff), color-stop(var(--col)), color-stop(#0066ff), to(var(--col)));
+  background: linear-gradient(to right, #0066ff, var(--col), #0066ff, var(--col), #0066ff, var(--col));
+  height: 100%;
+  right: 0px;
+  width: 200%;
+  position: absolute;
+  -webkit-animation: moveLeft 0.5s ease infinite;
+          animation: moveLeft 0.5s ease infinite;
 }
 
 .editor-container-compose .upload-btn {
